app/assets/stylesheets/components/_navigation.scss
.navigation-form {
  //width: 100%;
  //display: flex;
  position: fixed;
  bottom: 0;
  z-index: 120;
  margin-bottom: 75px;
}

.form-popup-wrapper {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 90%;
  max-width: 500px;
  background-color: #A1CD9A;
  padding-top: 10px;
  padding-left: 10px;
  padding-right: 10px;
  border-radius: 8px;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
  z-index: 130;
}

// Navigation bar styles
.navigation {
  width: 100%;
  display: flex;
  justify-content: space-evenly;
  background-color: $ft-green;
  position: fixed;
  bottom: 0;
  z-index: 120;
  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2); // Subtle shadow for depth
}

// Icon styles
.nav-icon {
  margin-top: 10px;
  text-decoration: none;
  color: $ft-black;
  transition: transform 0.2s; // Smooth hover effect
  &:hover {
    transform: scale(1.1); // Slightly increase size on hover
  }

  &.active { // this active class gets applied
    .nav-font {
      border-radius: 50%;
      background-color: white;
      box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
    }
  }
}

.nav-font {
  font-size: 40px;
}

// "+" button styling
.nav-icon-add {
  background-color: $ft-light-green;
  text-align: center;
  width: 60px;
  height: 60px;
  border-radius: 50%;
  border-style: solid;
  border-color: white;
  border-width: 5px;
  position: relative;
  top: -15px;
  padding-top: 5px;
  transition: background-color 0.3s, transform 0.3s;
  &:hover {
    background-color: darken($ft-light-green, 10%); // Darken on hover
    transform: rotate(90deg); // Rotate on hover
  }
}

.nav-font-add {
  vertical-align: middle;
  font-size: 40px;
}

// Dropdown menu

.main-dropdown-container {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}

.main-dropdown-container .dropdown-menu {
  position: absolute !important;
  top: -75% !important;
  left: -75% !important;
  animation: 3s slideup ease;
}

.dropdown-item-navigation {
  display: block;
  width: 100%;
  clear: both;
  font-weight: 400;
  color: $ft-black;
  text-decoration: none;
  white-space: nowrap;
  transition: background-color 0.3s; // Smooth background change on hover
  &:hover {
    background-color: $ft-light-green; // Background color on hover
  }
}

.button {
  border-width: 2.5px;
  border-color: black;
  border-style: outset;
  border-image: initial;
  border-radius: 32px;
  padding: 8px;
  background-color: white;
  margin-bottom: 10px;
}

.close-icon {
  text-decoration: none;
  position: absolute;
  top: 5px;
  right: 0;
  border-style: none;
  margin-bottom: 5px;
  font-size: 20px;
  cursor: pointer; // Change cursor to pointer on hover
  color: $ft-black;
  transition: color 0.3s; // Smooth color change on hover
  &:hover {
    color: darken($ft-black, 20%); // Darken color on hover
  }
}

